Fixed vertical alignment issue in custom theme.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@57 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/reg.css
+++ b/reg.css
@@ -27,7 +27,6 @@ tr.odd .reg-form-item, tr.even .reg-form-item {
 
 td .reg-name {
 	width: 200px;
-	vertical-align: top;
 }
 
 td .reg-value {
